Edited all instances of password into key to keep it congruent with my website's name.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>KeyGen</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>KeyGen</title>
   </head>
   <body>
     <div class="wrapper">
@@ -20,12 +20,12 @@
           <br>
           <input id="specs" class="checkbox" type="checkbox">Specials</input>
           <br>
-          <input id="passlength" class="lengthbar" type="text" placeholder="key length (number)"> 
+          <input id="keylength" class="lengthbar" type="text" placeholder="key length (number)"> 
         </div>
         <div class="card-body">
           <textarea
             readonly
-            id="password"
+            id="key"
             placeholder="Your Secure Key"
             aria-label="Generated Key"
           ></textarea>
